--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -8,6 +8,7 @@
         "PGPASSWORD": "passwd"
     },
     "PROD":{
+        "PORT": 3009,
         "PGDATABASE": "railway",
         "PGHOST": "containers-us-west-147.railway.app",
         "PGPORT": "6824",
